--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,9 @@
     "require": {
         "twig/twig": "^3.3",
         "vlucas/phpdotenv": "^5.3",
-        "vlucas/valitron": "^1.4"
+        "vlucas/valitron": "^1.4",
+        "ext-pdo": "^7.4",
+        "robmorgan/phinx": "^0.12.7",
+        "symfony/yaml": "^5.3"
     }
 }
